tests/fixtures/module_reinclusion.out
error: Duplicate include

        @ __ROOT__/tests/fixtures/module_reinclusion.rb:4
      4 |    include Enumerable::[Integer]
                     ^^^^^^^^^^^^^^^^^^^^^ here
        @ (builtin stdlib):__LINE__
    784 |    include Enumerable::[ElementType]
                     ^^^^^^^^^^^^^^^^^^^^^^^^^ previous inclusion was here

error: Duplicate include

        @ __ROOT__/tests/fixtures/module_reinclusion.rb:9
      9 |    include Enumerable::[String]
                     ^^^^^^^^^^^^^^^^^^^^ here
        @ __ROOT__/tests/fixtures/module_reinclusion.rb:8
      8 |    include Enumerable::[Integer]
                     ^^^^^^^^^^^^^^^^^^^^^ previous inclusion was here
